--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,9 @@
-<h1>
-    Show Top Revenue Movies Later
-</h1>
+<div class="rounded">
+  <div class="container-fluid light">
+    <div class="row">
+      <div *ngFor="let movie of movies">
+        <app-movie-card [movie]="movie"> </app-movie-card>
+      </div>
+    </div>
+  </div>
+</div>
